--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
   align-items: center;
   height: 100vh;
   /* Set background image */
-  background-image: url('C:\Users\stuti\Downloads\image.jpeg');
+  background-image: url('C:\Users\stuti\OneDrive - Illinois Institute of Technology\Desktop\sunrise');
   /* Center and cover the background */
   background-size: cover;
   background-position: center;
