--- a/style.css
+++ b/style.css
@@ -11,8 +11,8 @@ body {
     align-items: center;
     font-family: Arial, sans-serif;
     background-color: #f0f0f0;
-    color: #333;
-    background-image: url('seabeach.png'); /* Replace with your image path */
+    color: #FF1493; /* Change text color to pink */
+    background-image: url('sunrise.png'); /* Replace with your image path */
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
