--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
     font-family: Arial, sans-serif;
     background-color: #f0f0f0;
     color: #FF1493; /* Change text color to pink */
-    background-image: url('sunrise.png'); /* Replace with your image path */
+    background-image: url('seabeach.png'); /* Replace with your image path */
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
